--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
           </figure>
         </a>        
       </div>
+      <div class="swiper-slide">
+        <a href="settings.html?theme=green" class="skins-slide theme">
+          <figure class="skins-slide__wrap">
+            <div class="skins-slide__pic">
+              <img src="img/pic/green.png" alt="Тема 8">
+            </div>
+            <figcaption class="skins-slide__name">Выбери: тема 8</figcaption>
+          </figure>
+        </a>        
+      </div>
     </div>
   </div>
   
