--- a/settings.html
+++ b/settings.html
@@ -110,6 +110,7 @@
                 <option value="orange">Тема 5</option>
                 <option value="black">Тема 6</option>
                 <option value="red">Тема 7</option>
+                <option value="green">Тема 8</option>
               </select>
 <!--
               <script>
