Add yandex account

--- a/settings.html
+++ b/settings.html
@@ -137,15 +137,19 @@
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш WhatsApp (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="mobile">
+            <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="номер мобильного">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Viber (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="viber" placeholder="mobile">
+            <input class="input settings__form-input" type="tel" name="viber" placeholder="номер мобильного">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Telegram (опционально)</span>
-            <input class="input settings__form-input" type="text" name="telegram" placeholder="username">
+            <input class="input settings__form-input" type="text" name="telegram" placeholder="username в настройках профиля">
+          </label>
+          <label class="settings__form-label">
+            <span class="settings__form-title">Ваш Yandex-кошелек (если хотите принимать оплаты)</span>
+            <input class="input settings__form-input" type="text" name="yandexWallet" placeholder="yandex аккаунт">
           </label>
           <button id="confirm_btn" class="btn settings__form-submit" type="submit">Подтвердить</button>
           
