--- a/settings.html
+++ b/settings.html
@@ -149,7 +149,7 @@
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Yandex-кошелек (если хотите принимать оплаты)</span>
-            <input class="input settings__form-input" type="text" name="yandexWallet" placeholder="yandex аккаунт">
+            <input class="input settings__form-input" type="text" name="yandexWalletAccount" placeholder="410************">
           </label>
           <button id="confirm_btn" class="btn settings__form-submit" type="submit">Подтвердить</button>
           
