--- a/settings.html
+++ b/settings.html
@@ -137,11 +137,11 @@
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш WhatsApp (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="номер мобильного">
+            <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="+7**********">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Viber (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="viber" placeholder="номер мобильного">
+            <input class="input settings__form-input" type="tel" name="viber" placeholder="+7**********">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Telegram (опционально)</span>
