--- a/mlm/belluna_brand_shop.html
+++ b/mlm/belluna_brand_shop.html
@@ -64,7 +64,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/72293480_2344951345574048_177106717367074816_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&oh=025fca240fc36d133351812d19a4d096&oe=5E8F6100" alt="Original Brand">
+							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/72293480_2344951345574048_177106717367074816_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=EZHm1XvpKwUAX_xI7B0&oh=7a3549d3b7ec89dc0bea8a2fbd7ee2ff&oe=5E8F6100" alt="Original Brand">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -101,7 +101,7 @@
 								<br/>&nbsp;&nbsp;- получено от продаж: <b>0 RUB</b>
 							</p>
 							<p>
-								<a href="https://odezhda-iz-ssha.ru" target="_blank"><b>Сайт</b></a>
+								<a href="" target="_blank"><b>Сайт</b></a>
 							</p>
 						</div>
 					</div>
@@ -142,6 +142,7 @@
 
 
 					<a href="https://www.instagram.com/belluna_brand_shop" target="_blank" 
+					onclick="ym(56750959, 'reachGoal', 'Instagram'); return true;"
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">Instagram</div>
@@ -151,6 +152,21 @@
 		</div>			
 	</div>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(56750959, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/56750959" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 	<!--jQuery-->
 	<script src="../js/vendors/jquery.min.js"></script>
