--- a/mlm/gdmarkov.html
+++ b/mlm/gdmarkov.html
@@ -64,7 +64,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/24177425_1923549534638464_7199214316015321088_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&oh=f7f0c1180ebd2464a469c841c49961ab&oe=5E8081FC" alt="Gleb">
+							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/24177425_1923549534638464_7199214316015321088_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=zMI2fc12QTgAX_Q7Jlq&oh=42123831fa90d2b190d64f9e05a57080&oe=5EA80EFC" alt="Gleb">
 						</div>
 					</div>
 					<div class="main-sec__txt">
