--- a/links.html
+++ b/links.html
@@ -146,7 +146,7 @@
 					<h1 class="links-page-title">ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ</h1>
 
 					<div class="links-page-messagers count-5">
-						<a href="mailto:mailto:dimitriy.fomin@gmail.com" target="_blank" style="
+						<a href="mailto:dimitriy.fomin@gmail.com" target="_blank" style="
 "
 								onclick="ym(56430199, 'reachGoal', 'Email'); return true;"
 							class="links-page-messager">
