--- a/index.html
+++ b/index.html
@@ -361,6 +361,18 @@
     <h2 class="sec__title">Часто <span class="double-txt-w" data-text="задаваемые">задаваемые</span><br> <span class="bg-line-w">вопросы</span></h2>
     <div class="how-it-work__main">
       <div class="how-it-work__accordion">
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>НАША МИССИЯ</span></div>
+        <div class="how-it-work__txt">
+          <p>Мне очень нравится тенденция, на которую обращает своё внимание Екатерина Иноземцева <a href="https://instagram.com/einozemka" target="_blank">@einozemka</a>:</p>
+          <p>«В личный бренд приходит все больше людей, которые хотят помогать другим больше, чем зарабатывать на этом.»</p>
+          <p>Мне очень по душе этот тренд и он откликается в нашей миссии:</p>
+          <p>“Первоклассный it продукт должен стоить столько, чтобы покрывать затраты на сервера и зарплату сотрудников, при этом он должен быть простым и мощным, как росток пробивающийся через бетон».</p>
+          <p>Я очень люблю своих заказчиков за то, что они открыты миру всем сердцем и делают чистое добро.</p>
+          <p>Я очень горжусь тем, что они позволяют мне помогать им, чтобы мы вместе ещё больше могли помогать остальным.</p>
+          <p>Поэтому, стоимость сайта ЛИЧНОГО БРЕНДА из Инстаграм соответсвует стоимости хостинга собственного сайта.</p>
+        </div>
+      </div>
+      <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Я ничего не понимаю в сайтах, у меня получится?</span></div>
         <div class="how-it-work__txt">
           <p>Даже не сомневайтесь, у вас все получится! Вам не нужно ничего знать о сайтах. Мы - первая платформа, которая не требует от пользователя никаких навыков. Ровно 100% того, что требуется для создания сайта, будет решено без вашего участия. И все же вам понадобятся следующее:</p>
