--- a/mlm/anton_sors.html
+++ b/mlm/anton_sors.html
@@ -11,8 +11,8 @@
     
     <meta name="description" content="🥋 Автор проекта "Осознанная Россия"
 👑 Развиваю память, интуицию и интеллект
-🎯 Обучил более 5000 человек яснознанию
-⬇️ Бесплатная консультация">
+🎯 Обучаю людей яснознанию
+⬇️ Только для любопытных">
     <meta name="keywords" content="MLM" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
@@ -44,8 +44,8 @@
     <meta property="og:title" content="MLM А Н Т О Н   С О Р С" />
     <meta property="og:description" content="🥋 Автор проекта "Осознанная Россия"
 👑 Развиваю память, интуицию и интеллект
-🎯 Обучил более 5000 человек яснознанию
-⬇️ Бесплатная консультация" />
+🎯 Обучаю людей яснознанию
+⬇️ Только для любопытных" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="MLM anton_sors" />
 </head>
@@ -64,7 +64,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/74479775_447684895952817_1044025623883808768_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1gQJc7iExMAX_E-PqK&oh=5f481f3a62f09293cfa5390b15239ef3&oe=5EA47CE6" alt="А Н Т О Н   С О Р С">
+							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/74479775_447684895952817_1044025623883808768_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=OOoXde160hMAX_rRn7g&oh=116bba1d7db73b10cc8aaf743c959017&oe=5EA47CE6" alt="А Н Т О Н   С О Р С">
 						</div>
 					</div>
 					<div class="main-sec__txt">
