Popup info in tariff

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Собственный домен</li>
-              <li class="excluded"><span>&#65794;</span> Landing page</li>
+              <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
           <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
@@ -594,7 +594,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li class="excluded"><span>&#65794;</span> Landing page</li>
+              <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
           <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bloger&targets-hint=&default-sum=2400&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
@@ -620,7 +620,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li><span>&#10003;</span> Landing page</li>
+              <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
           <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Business&targets-hint=&default-sum=3600&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
@@ -646,7 +646,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li><span>&#10003;</span> Landing page</li>
+              <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
           <a href="links.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
