--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <link rel="image_src" href="https://lichnyj-brend.ru/img/og/og.jpg"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://lichnyj-brend.ru"/>
-    <meta property="og:image" content="https://lichnyj-brend.ru/img/og/og.jpg"/>
+    <meta property="og:image" content="https://lichnyj-brend.ru/img/lichnyj-brend.jpg"/>
+    <meta property="og:image:secure_url" content="https://lichnyj-brend.ru/img/lichnyj-brend.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image:width" content="1024"/>
-    <meta property="og:image:height" content="512"/>
+    <meta property="og:image:width" content="1080"/>
+    <meta property="og:image:height" content="720"/>
     <meta property="og:title" content="ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ"/>
     <meta property="og:description" content="Личный бренд - это инновационная платформа для создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7."/>
     <meta property="og:locale" content="Ru-ru"/>
