--- a/settings.html
+++ b/settings.html
@@ -93,7 +93,7 @@
           Ваш сайт <span>ЛИЧНОГО БРЕНДА</span> готов на 75%
         </h1>
         <div class="settings__txt">
-          <p><b>Чтобы вашим подписчикам было удобно связываься с вами, вы можете добавить свои мессенджеры</b></p>
+          <p><b>Чтобы вашим подписчикам было удобно связываться с вами, вы можете добавить свои мессенджеры</b></p>
           <p>Еще больше возможностей будут доступны после публикации <strong>БЕСПЛАТНОЙ</strong> странички ссылок</p>
         </div>
         <form action="https://admapi.itsinsta.site/api/profiles" method="post" class="settings__form">
@@ -131,11 +131,11 @@
             <small id="inst_comment" class="settings__form-small">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это&nbsp;поле&nbsp;ОБЯЗАТЕЛЬНОЕ.</small>
           </div>
           <label class="settings__form-label">
-            <span class="settings__form-title">E-mail для заявок *</span>
+            <span class="settings__form-title">E-mail для регистрации *</span>
             <input class="input settings__form-input" type="email" name="email" placeholder="user_name@site.com">
-            <small class="settings__form-small">Вы сможете получать заявки с вашего сайта на почту.</small>            
+            <small class="settings__form-small">Ваш доступ в личный кабинет.</small>            
           </label>
-          <label class="settings__form-label">
+          <!--<label class="settings__form-label">
             <span class="settings__form-title">Ваш WhatsApp (опционально)</span>
             <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="+7**********">
           </label>
@@ -150,7 +150,7 @@
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Yandex-кошелек (если хотите принимать оплаты)</span>
             <input class="input settings__form-input" type="text" name="yandexWalletAccount" placeholder="410************">
-          </label>
+          </label>-->
           <button id="confirm_btn" class="btn settings__form-submit" type="submit">Подтвердить</button>
           
         </form>
