--- a/settings.html
+++ b/settings.html
@@ -131,9 +131,9 @@
             <small id="inst_comment" class="settings__form-small">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это&nbsp;поле&nbsp;ОБЯЗАТЕЛЬНОЕ.</small>
           </div>
           <label class="settings__form-label">
-            <span class="settings__form-title">E-mail для регистрации *</span>
-            <input class="input settings__form-input" type="email" name="email" placeholder="user_name@site.com">
-            <small class="settings__form-small">Ваш доступ в личный кабинет.</small>            
+            <span class="settings__form-title">E-mail для заявок *</span>
+            <input class="input settings__form-input" type="email" name="email" placeholder="user_name@site.com" required>
+            <small class="settings__form-small">Вы сможете получать заявки с вашего сайта на почту.</small>            
           </label>
           <!--<label class="settings__form-label">
             <span class="settings__form-title">Ваш WhatsApp (опционально)</span>
