--- a/settings.html
+++ b/settings.html
@@ -93,7 +93,7 @@
           Ваш сайт <span>ЛИЧНОГО БРЕНДА</span> готов на 75%
         </h1>
         <div class="settings__txt">
-          <p><b>Чтобы вашим подписчикам было удобно связываться с вами, вы можете добавить свои мессенджеры</b></p>
+          <p><b>Введите свой инстаграм и e-mail чтобы закончить создание вашего сайта личного бренда</b></p>
           <p>Еще больше возможностей будут доступны после публикации <strong>БЕСПЛАТНОЙ</strong> странички ссылок</p>
         </div>
         <form action="https://admapi.itsinsta.site/api/profiles" method="post" class="settings__form">
