--- a/settings.html
+++ b/settings.html
@@ -190,6 +190,7 @@
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Собственный домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
           <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
@@ -216,9 +217,10 @@
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
-          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bloger&targets-hint=&default-sum=2400&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bloger&targets-hint=&default-sum=2400&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
@@ -242,14 +244,15 @@
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
               <li><span>&#10003;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
-          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Business&targets-hint=&default-sum=3600&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Business&targets-hint=&default-sum=3600&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
             <div class="popup__col-plan">Agency</div>
-            <div class="popup__col-price">₽80.000</div>
+            <div class="popup__col-price">₽14.000</div>
             <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
           <div class="popup__col-main">
@@ -268,9 +271,10 @@
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
               <li><span>&#10003;</span> Popup окна</li>
+              <li><span>&#10003;</span> White label</li>
             </ul>
           </div>
-          <a href="links.html" target="_blank" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
+          <a href="links.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
         </div>        
 
 
