--- a/thanks.html
+++ b/thanks.html
@@ -132,7 +132,8 @@
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Собственный домен</li>
-              <li class="excluded"><span>&#65794;</span> Landing page</li>
+              <li class="excluded"><span>&#65794;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
           <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
@@ -158,7 +159,8 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li class="excluded"><span>&#65794;</span> Landing page</li>
+              <li class="excluded"><span>&#65794;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
           <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bloger&targets-hint=&default-sum=2400&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
@@ -184,7 +186,8 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li><span>&#10003;</span> Landing page</li>
+              <li><span>&#10003;</span> Popup окна</li>
+              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
           <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Business&targets-hint=&default-sum=3600&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
@@ -192,7 +195,7 @@
         <div class="popup__col">
           <div class="popup__col-header">
             <div class="popup__col-plan">Agency</div>
-            <div class="popup__col-price">₽80.000</div>
+            <div class="popup__col-price">₽14.000</div>
             <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
           <div class="popup__col-main">
@@ -210,7 +213,8 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
-              <li><span>&#10003;</span> Landing page</li>
+              <li><span>&#10003;</span> Popup окна</li>
+              <li><span>&#10003;</span> White label</li>
             </ul>
           </div>
           <a href="links.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
