--- a/settings.html
+++ b/settings.html
@@ -132,7 +132,7 @@
           </div>
           <label class="settings__form-label">
             <span class="settings__form-title">E-mail для заявок *</span>
-            <input class="input settings__form-input" type="email" name="email" placeholder="user_name@site.com" required>
+            <input class="input settings__form-input" type="email" name="email" placeholder="user_name@site.com">
             <small id="errorEmail" class="settings__form-small error"></small>
             <small class="settings__form-small">Вы сможете получать заявки с вашего сайта на почту.</small>            
           </label>
