--- a/process.html
+++ b/process.html
@@ -303,7 +303,7 @@ $(document).ready(function(){
 
                 var siteUrl = data.siteUrl;
                 if (siteUrl) {
-                    window.location.reload(true);
+                    window.location.href = window.location.href;
                 }
             },
             error: function( data ) {
