--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <nav class="menu">
           <ul>
             <li><a href="blog.html">Блог</a></li>
+            <li><a href="http://itsinsta.site/page.html">Войти</a></li>
             <li><button class="btn js-tarrifs-btn" onclick="document.getElementById('js-popup').classList.toggle('open');">Тарифы</button></li>
           </ul>
         </nav>        
