--- a/settings.html
+++ b/settings.html
@@ -286,8 +286,8 @@
           <div class="footer__wrap"><a class="logo" href="/">ЛИЧНЫЙ БРЕНД</a>
             <nav class="menu">
               <ul>
+                <li><a href="http://itsinsta.site/page.html">Вход</a></li>
                 <li><a href="blog.html">Блог</a></li>
-                <li><a href="http://itsinsta.site/page.html">Войти</a></li>
                 <li>
                   <button class="btn js-tarrifs-btn" onclick="document.getElementById('js-popup').classList.toggle('open');">Тарифы</button>
                 </li>
