--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <div class="header__nav">
         <nav class="menu">
           <ul>
+            <li><a href="http://itsinsta.site/page.html">Вход</a></li>
             <li><a href="blog.html">Блог</a></li>
-            <li><a href="http://itsinsta.site/page.html">Войти</a></li>
             <li><button class="btn js-tarrifs-btn" onclick="document.getElementById('js-popup').classList.toggle('open');">Тарифы</button></li>
           </ul>
         </nav>        
@@ -665,8 +665,8 @@
           <div class="footer__wrap"><a class="logo" href="/">ЛИЧНЫЙ БРЕНД</a>
             <nav class="menu">
               <ul>
+                <li><a href="http://itsinsta.site/page.html">Вход</a></li>
                 <li><a href="blog.html">Блог</a></li>
-                <li><a href="http://itsinsta.site/page.html">Войти</a></li>
                 <li>
                   <button class="btn js-tarrifs-btn" onclick="document.getElementById('js-popup').classList.toggle('open');">Тарифы</button>
                 </li>
