--- a/mlm/nataroz.psy.coach.html
+++ b/mlm/nataroz.psy.coach.html
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" href="../css/style.css"/>
     
     <meta name="description" content="Наталья Аррожейро
-💎 Создаю мир счастливых и эффективных людей
-❤️ Узнаешь и полюбишь себя ❤️
-🌈 Раскроешь силу и научишься применять
-Запишись здесь👇">
+💎 Создаю мир счастливых и успешных людей
+❤️ Узнаешь и полюбишь себя
+🌈 Увидишь свою силу и научишься применять
+Жми в программы 👇">
     <meta name="keywords" content="MLM" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
@@ -44,10 +44,10 @@
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="MLM КОУЧ♦️ПСИХОЛОГ♦️ОТНОШЕНИЯ" />
     <meta property="og:description" content="Наталья Аррожейро
-💎 Создаю мир счастливых и эффективных людей
-❤️ Узнаешь и полюбишь себя ❤️
-🌈 Раскроешь силу и научишься применять
-Запишись здесь👇" />
+💎 Создаю мир счастливых и успешных людей
+❤️ Узнаешь и полюбишь себя
+🌈 Увидишь свою силу и научишься применять
+Жми в программы 👇" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="MLM nataroz.psy.coach" />
 </head>
