--- a/index_30.html
+++ b/index_30.html
@@ -91,6 +91,7 @@
           </ul>
         </nav>        
       </div>
+      <a href="settings.html" class="btn btn_red header__btn"><span>Попробовать</span></a>
     </div>
   </div>
 </header><section class="sec sec_dark sec_first main-sec">
@@ -108,7 +109,6 @@
  
         <form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
           <input id="ref" type="hidden" name="ref" value="" />
-          <input id="theme" type="hidden" name="theme" value="" />
           <div class="main-sec__form-row">
             <label class="main-sec__form-label">
               <span class="main-sec__form-title">Введите Ваш Instagram</span>
@@ -155,7 +155,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+      <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
       <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -172,7 +172,7 @@
   <div class="skins-slider" id="js-skins-slider">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=pink" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/pink.png" alt="Тема 1">
@@ -182,7 +182,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=marine" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/marine.png" alt="Тема 2">
@@ -192,7 +192,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=gold" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/gold.png" alt="Тема 3">
@@ -202,7 +202,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=violet" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/violet.png" alt="Тема 4">
@@ -212,7 +212,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=orange" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/orange.png" alt="Тема 5">
@@ -222,7 +222,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=black" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/black.png" alt="Тема 6">
@@ -232,7 +232,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=red" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/red.png" alt="Тема 7">
@@ -242,7 +242,7 @@
         </a>        
       </div>
       <div class="swiper-slide">
-        <a href="#" class="skins-slide theme">
+        <a href="settings.html?theme=green" class="skins-slide theme">
           <figure class="skins-slide__wrap">
             <div class="skins-slide__pic">
               <img src="img/pic/green.png" alt="Тема 8">
@@ -256,7 +256,7 @@
   
   <div class="container">
     <div class="sec__footer">
-      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+      <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
       <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -312,7 +312,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+      <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
       <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -353,7 +353,7 @@
     </div>
     
     <div class="sec__footer">
-      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+      <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
       <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -572,7 +572,7 @@
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
-          <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+          <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
@@ -735,7 +735,10 @@ $(document).ready(function(){
 
     if (ref) {
         $("#ref").val(ref);
-
+        $('.theme').each(function(i, obj) {
+            $(obj).attr("href", $(obj).attr("href") + "&ref=" + ref);
+        });
+        $("a[href='settings.html']").attr("href", "settings.html?ref=" + ref);
         $.get("https://admapi.itsinsta.site/api/profiles/" + ref, 
             function(data) { 
                 $("#header").show();
@@ -745,18 +748,6 @@ $(document).ready(function(){
                 $("#header").find(".header__title").text(data.title);
             });
     }
-
-    $('.theme').each(function(i, obj) {
-        $(obj).click(function() {
-            var theme = $(obj).find("img").attr("src").replace("img/pic/", "").replace(".png", "");
-            $("#theme").val(theme);
-            $('html, body').animate({ scrollTop: 80}, 250); 
-        });
-    });
-
-    $('.js-header-up').click(function(){
-    	$('html, body').animate({ scrollTop: 80}, 250); 
-    }); 
 
     $('form').submit(function(){
 	event.preventDefault(); //prevent default action 
@@ -780,15 +771,9 @@ $(document).ready(function(){
                 contentType: 'application/json',
 		data : form_data
 	}).done(function(response){
-		var redirect = response.adminUrl;
-                if (!redirect) {
-                  redirect = response.siteUrl;
-                }
-                if (!redirect) {
-                    redirect = "http://lichnyj-brend.ru/thanks?username=" + username;
-                    if (ref) {
+		var redirect = "https://lichnyj-brend.ru/settings?username=" + username;
+                if (ref) {
 			redirect = redirect + "&ref=" + ref;
-                    }
                 }
                 window.location.href = redirect;
 	}).fail(function(){
