--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
         <div class="popup__col">
           <div class="popup__col-header">
             <div class="popup__col-plan">Start</div>
-            <div class="popup__col-price">₽0 </div>
-            <div class="popup__col-period">навсегда</div>
+            <div class="popup__col-price">₽100</div>
+            <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
           <div class="popup__col-main">
             <ul>
@@ -568,7 +568,7 @@
               <li class="excluded"><span>&#65794;</span>&nbsp;Поисковое&nbsp;продвижение</li>
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
-              <li class="excluded"><span>&#65794;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Свой домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
@@ -594,7 +594,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
@@ -620,7 +620,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
@@ -646,7 +646,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
