--- a/process.html
+++ b/process.html
@@ -93,8 +93,8 @@
         <div class="popup__col">
           <div class="popup__col-header">
             <div class="popup__col-plan">Start</div>
-            <div class="popup__col-price">₽0 </div>
-            <div class="popup__col-period">навсегда</div>
+            <div class="popup__col-price">₽100</div>
+            <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
           <div class="popup__col-main">
             <ul>
@@ -110,7 +110,7 @@
               <li class="excluded"><span>&#65794;</span>&nbsp;Поисковое&nbsp;продвижение</li>
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
-              <li class="excluded"><span>&#65794;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Свой домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
@@ -136,7 +136,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
@@ -162,7 +162,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
@@ -188,7 +188,7 @@
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
-              <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li><span>&#10003;</span> Popup окна</li>
             </ul>
           </div>
