--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="skins__main">
       <h2 class="sec__title">Тебе понравится, <br><span>выбери любую тему</span></h2>
       <div class="sec__txt">
-        <p>Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. А ещё вы получаете страницу для ссылки Instagram в разделе профиля: красиво, удобно и БЕСПЛАТНО!</p>
+        <p>Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. А ещё вы получаете страницу для ссылки Instagram в разделе профиля: красиво, удобно и ПРОСТО!</p>
       </div>
     </div>  
   </div>
