--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
           <small id="inst_comment" class="settings__form-small"></small>
           <small id="error" class="settings__form-small error"></small>
-          <small class="main-sec__form-small">Попробуй бесплатно • Дальше действовать будет бренд</small>
+          <small class="main-sec__form-small">Попробуйте 3 дня бесплатно • Дальше действовать будет бренд</small>
         </form>
       </div>
       <div class="main-sec__fig">
@@ -156,7 +156,7 @@
     </ul>
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Попробуйте 3 дня бесплатно  • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_dark skins" id="skins">
@@ -257,7 +257,7 @@
   <div class="container">
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_white quality">
@@ -275,7 +275,7 @@
         <div class="quality__item-icn quality__item-icn_links"></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Неограниченные ссылки</div>
-          <div class="quality__item-txt">Выбирайте между готовыми темами дизайна или создавайте свой уникальный стиль странички ссылок .</div>
+          <div class="quality__item-txt">Выбирайте между готовыми темами дизайна или создавайте свой уникальный стиль странички ссылок.</div>
         </div>
       </li>
       <li class="quality__item">
@@ -289,14 +289,14 @@
         <div class="quality__item-icn quality__item-icn_resonance"></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Социальный резонанс</div>
-          <div class="quality__item-txt">Создавайте перекресные ссылки и направляте подписчиков на другие ресурсы или продавайте прямо в инстаграм.</div>
+          <div class="quality__item-txt">Создавайте перекресные ссылки и направляйте подписчиков на другие ресурсы или продавайте прямо в инстаграм.</div>
         </div>
       </li>
       <li class="quality__item">
         <div class="quality__item-icn quality__item-icn_domen"><small>w</small>W<small>w</small></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Персональный домен</div>
-          <div class="quality__item-txt">Подключите свой красивый домен, напечатайте его на визитках, в журналах или в размещайте на тематических порталах.</div>
+          <div class="quality__item-txt">Подключите свой красивый домен, напечатайте его на визитках, в журналах или размещайте на тематических порталах.</div>
         </div>
       </li>
       <li class="quality__item">
@@ -313,7 +313,7 @@
     </ul>
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_dark reviews">
@@ -354,7 +354,7 @@
     
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуй бесплатно  • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_white how-it-work">
