--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
           <small id="inst_comment" class="settings__form-small"></small>
           <small id="error" class="settings__form-small error"></small>
-          <small class="main-sec__form-small">Попробуйте 3 дня бесплатно • Дальше действовать будет бренд</small>
+          <small class="main-sec__form-small">3 дня бесплатно • Дальше действовать будет бренд</small>
         </form>
       </div>
       <div class="main-sec__fig">
@@ -156,7 +156,7 @@
     </ul>
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуйте 3 дня бесплатно  • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_dark skins" id="skins">
@@ -257,7 +257,7 @@
   <div class="container">
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_white quality">
@@ -313,7 +313,7 @@
     </ul>
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_dark reviews">
@@ -354,7 +354,7 @@
     
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">Попробуйте 3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_white how-it-work">
@@ -550,7 +550,7 @@
       <div class="popup__tab">
         <div class="popup__col">
           <div class="popup__col-header">
-            <div class="popup__col-plan">Start</div>
+            <div class="popup__col-plan">Bio</div>
             <div class="popup__col-price">₽100</div>
             <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
